--- a/mvc/ExemploMVC02/ExemploMVC02/bin/ExemploMVC02.dll.config
+++ b/mvc/ExemploMVC02/ExemploMVC02/bin/ExemploMVC02.dll.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\104958\Documents\GitHub\mvc\ExemploMVC02\ExemploMVC02\Database\ExemploMVC02.mdf;Integrated Security=True;Connect Timeout=30"/>
+    <add name="DefaultConnection"
+      connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\104895\Documents\GitHub\ExemplosMVC\mvc\ExemploMVC02\ExemploMVC02\Database\ExemploMVC02.mdf;Integrated Security=True;Connect Timeout=30"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
@@ -29,7 +30,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
+        <bindingRedirect oldVersion="1.0.0.0-5.2.6.0" newVersion="5.2.6.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
